--- a/polish-version-calisia-web/o-konkursie.html
+++ b/polish-version-calisia-web/o-konkursie.html
@@ -148,12 +148,13 @@
                     </div>
                 </div>
 
-                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kursy.jpg" alt="konkurs" />
+               <!-- <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kursy2.jpg" alt="konkurs" />
                     <div class="label-photo">
                         Kursy pianistyczne z dr. Łukaszem Byrdy
                     </div>
                 </div>
+            -->
 
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
                     <img class="img-kalisz-1 img-kalisz-2" src="slider-images/5-6.jpg" alt="konkurs" />
