--- a/chinese-version/foto.html
+++ b/chinese-version/foto.html
@@ -36,14 +36,14 @@
                             alt="logo, gold letters, calisia arts" /></a>
                     <ul class="nav navbar-nav">
                         <li><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a></li>
-                        <li class="active"><a data-scroll href="about-chinese.html" class="int-collapse-menu">简介</a>
+                        <li ><a data-scroll href="about-chinese.html" class="int-collapse-menu">简介</a>
                         </li>
                         <li><a data-scroll href="team-chinese.html" class="int-collapse-menu"> 团队</a></li>
                         <li><a data-scroll href="contact-chinese.html" class="int-collapse-menu">联系方式</a>
                         </li>
                         <li class="li-hamburger"><a data-scroll href="rules-chinese.html" class="int-collapse-menu">
                                 ⽐赛</a></li>
-                        <li><a data-scroll href="foto.html" class="int-collapse-menu">照片庫</a>
+                        <li class="active"><a data-scroll href="foto.html" class="int-collapse-menu">照片庫</a>
                         </li>
                     </ul>
                     <div class="languages">
