--- a/artysci.html
+++ b/artysci.html
@@ -102,7 +102,7 @@
                 </div>
                 <img class="jury-img mb-5" src="slider-images/lukasz.jpg">
                 <div class="label-photo">
-                    dr Łukasz Byrdy
+                    Dr. Łukasz Byrdy
                 </div>
                 <!-- Button trigger modal -->
                 <button type="button" class="mb-5 btn btn-secondary" data-bs-toggle="modal"
@@ -114,7 +114,7 @@
                 </div>
                 <img class="jury-img mb-5" src="slider-images/raubo.jpg">
                 <div class="label-photo">
-                    prof. Zbigniew Raubo
+                    Prof. Zbigniew Raubo
                 </div>
                 <!-- Button trigger modal -->
                 <button type="button" class="mb-5 btn btn-secondary" data-bs-toggle="modal"
