--- a/polish-version-calisia-web/festiwal24.html
+++ b/polish-version-calisia-web/festiwal24.html
@@ -106,6 +106,9 @@
                 <a href="artysci.html" class="card card2">
                     Artyści
                 </a>
+                <a href="foto-festival24.html" class="card card2">
+                    Fotorelacja
+                </a>
             </section>
         </section>
 
