--- a/polish-version-calisia-web/o-festiwalu.html
+++ b/polish-version-calisia-web/o-festiwalu.html
@@ -101,6 +101,9 @@
                 <a href="artysci.html" class="card" >
                     Artyści
                 </a>
+                <a href="foto-festival24.html" class="card" >
+                    Fotorelacja
+                </a>
 
             </div>
 
@@ -108,16 +111,16 @@
             <div class="container-text-photos">
                 <div class="text-container">
                     <p class="text-application width-form">
-                        Z wielką radością zapraszamy do udziału w I Kaliskim Festiwalu Pianistycznym, który odbędzie się
+                        I Kaliskim Festiwal Pianistyczny odbył się
                         w dniach 21-23 października 2024 roku w pięknej sali koncertowej <a href="https://https://www.psm.kalisz.pl" class="link-google link2" target="_blank">Państwowej Szkoły Muzycznej I i
                             II stopnia im. Henryka Melcera w Kaliszu</a>.
-                        I Kaliski Festiwal Pianistyczny to wyjątkowe wydarzenie, podczas którego publiczność będzie
+                        I Kaliski Festiwal Pianistyczny był wyjątkowym wydarzeniem, podczas którego publiczność
                         miała okazję wysłuchać interpretacji utworów z różnych epok w wykonaniu utytułowanych pianistów
-                        z Austrii, Polski i Włoch. Wśród zaproszonych artystów znajdują się także laureaci
-                        zeszłorocznego <a href="https://calisia-arts.com/polish-version-calisia-web/konkurs24.html" class="link2" target="_blank">I Międzynarodowego Konkursu Pianistycznego im. Henryka Melcera</a> zorganizowanego przez Fundację Calisia Arts.
+                        z Austrii, Polski i Włoch. Wśród zaproszonych artystów znajdowali się także laureaci
+                        <a href="https://calisia-arts.com/polish-version-calisia-web/konkurs24.html" class="link2" target="_blank">I Międzynarodowego Konkursu Pianistycznego im. Henryka Melcera</a> zorganizowanego przez Fundację Calisia Arts.
 
                         </br> </br>
-                        Oprócz koncertów, w trakcie Festiwalu odbędzie się również cykl wykładów oraz warsztatów
+                        Oprócz koncertów, w trakcie Festiwalu odbył się również cykl wykładów oraz warsztatów
                         pianistycznych dla uzdolnionej młodzieży z Kalisza i okolic prowadzonych przez: <a href="https://www.wagnerartzt.com" class="link-google link2" target="_blank">prof. Manfreda Wagner-Artzta</a> z Uniwersytetu Muzycznego w Wiedniu (mdw), a także <a href="https://am.katowice.pl/informacje/raubo-zbigniew-368" class="link2" target="_blank">prof. Zbigniewa Raubo</a> z Akademii Muzycznej im. Karola
                         Szymanowskiego  w Katowicach i <a href="https://lukaszbyrdy.com" class="link-google link2" target="_blank">dr. Łukasza Byrdy</a> z
                         Akademii Muzycznej im. I. J. Paderewskiego w Poznaniu.
