--- a/polish-version-calisia-web/program.html
+++ b/polish-version-calisia-web/program.html
@@ -96,11 +96,14 @@
                 <h1 class="h1-team">Program</h1>
             </div>
             <div class="main-festiwal margin-bez">
-                <a href="o-festiwalu.html" class="card">
-                    O festiwalu
+                <a href="o-festiwalu.html" class="card card2">
+                    O festiwalu 2024
                 </a>
                 <a href="artysci.html" class="card">
                     Artyści
+                </a>
+                <a href="foto-festival24.html" class="card" >
+                    Fotorelacja
                 </a>
 
             </div>
