--- a/festiwal24.html
+++ b/festiwal24.html
@@ -98,13 +98,16 @@
 
             <section class="main-festiwal main2">
                 <a href="o-festiwalu.html" class="card card2">
-                   About festival
+                   About festival 2024
                 </a>
                 <a href="program.html" class="card card2">
                     Program
                 </a>
                 <a href="artysci.html" class="card card2">
                     Artists
+                </a>
+                <a href="foto-festival24.html" class="card card2">
+                    Photo gallery
                 </a>
             </section>
         </section>
