--- a/foto-festival24.html
+++ b/foto-festival24.html
@@ -92,71 +92,75 @@
     </header>
     <section class="contact">
         <div class="team-h">
-            <h1 class="h1-team"> 1st International Henryk Melcer Piano Competition</h1>
+            <h1 class="h1-team"> Festival 2024 - Photo gallery</h1>
         </div>
         <div class="main-festiwal margin-bez wynik">
-            <a href="rules.html" class="card card2">
-                About competition 2023
+            <a href="o-festiwalu.html" class="card card2">
+                About festival 2024
             </a>
-            <a href="foto.html" class="card card2">
-                Photo gallery
+            <a href="program.html" class="card">
+                Program
             </a>
-            <a href="wyniki.html" class="card card2">
-                Results
+            <a href="artysci.html" class="card">
+                Artists
             </a>
-            <a href="jury.html" class="card card2">
-                Jury
-            </a>
-
+          
         </div>
 
         <div class="container-photo">
             <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/1-6.jpg" alt="city, kalisz, view" />
+                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/koncerty/Manfred .jpg"
+                    alt="city, kalisz, view" />
                 <div class="label-photo">
-                    The Winners' Concert at the Vienna Klaviergalerie, winners of the competition
+                    Recital by Manfred Wagner-Artzt
                 </div>
             </div>
             <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/2-6.JPG" alt="city, kalisz, view" />
+                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/koncerty/Lukasz.jpg"
+                    alt="city, kalisz, view" />
                 <div class="label-photo">
-                    The Winners' Concert at the H. Melcer Primary and Secondary Music School in Kalisz, Yukino Hayashi -
-                    1st Prize, Category E
+                    Recital by Łukasz Byrdy
                 </div>
             </div>
 
             <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/3-6.jpg" alt="konkurs" />
+                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/koncerty/Raubo .jpg" alt="konkurs" />
                 <div class="label-photo width-label">
-                    The Winners' Concert at the Calisia One complex, Kamila Kloc - 2nd Prize, Category A
-                </div>
-            </div>
-<!--
-            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kursy.jpg" alt="konkurs" />
-                <div class="label-photo">
-                    Piano masterclasses with Dr. Łukasz Byrdy
-                </div>
-            </div>
-        -->
-            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/5-6.jpg" alt="konkurs" />
-                <div class="label-photo">
-                    The Winners' Concert at the Calisia One complex, competition winners - Stefano Brizzi and Maciej
-                    Domagała
+                    Recital by Zbigniew Raubo 
                 </div>
             </div>
 
             <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/6-6.jpg" alt="city, kalisz, view" />
-                <div class="label-photo">
-
-                    The Winners' Concert at the Vienna Klaviergalerie, President of the Calisia Arts Foundation - Filip
-                    Pinczewski
+                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/koncerty/Filip Katarzyna.jpg" alt="konkurs" />
+                <div class="label-photo width-label">
+                    Festival Summary – Katarzyna Piątkowska-Pinczewska and Filip Pinczewski 
                 </div>
             </div>
 
-        </div>
+
+
+
+            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
+                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kursy/20241023_134600.jpg"
+                    alt="city, kalisz, view" />
+                <div class="label-photo">
+                    Piano Masterclasses with Prof. Manfred Wagner-Artzt
+                </div>
+            </div>
+            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kursy/20241021_131043.jpg"
+                    alt="city, kalisz, view" />
+                <div class="label-photo">
+                    Piano Masterclasses with Dr. Łukasz Byrdy
+                </div>
+            </div>
+
+            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kursy/20241022_143905.jpg" alt="konkurs" />
+                <div class="label-photo width-label">
+                    Piano Masterclasses with Prof. Zbigniew Raubo
+                </div>
+            </div>
         <!--
         <div class="width-form border-competition">
 
