--- a/o-festiwalu.html
+++ b/o-festiwalu.html
@@ -102,6 +102,9 @@
                 <a href="artysci.html" class="card">
                     Artists
                 </a>
+                <a href="foto-festival24.html" class="card card2">
+                    Photo gallery
+                </a>
 
             </div>
 
@@ -109,21 +112,19 @@
             <div class="container-text-photos">
                 <div class="text-container">
                     <p class="text-application width-form">
-                        We are thrilled to invite you to the 1st Kalisz Piano Festival, which will take place
-                        from October 21-23, 2024, in the beautiful concert hall of <a href="https://www.psm.kalisz.pl"
+                        We were thrilled to invite you to the 1st Kalisz Piano Festival, which took place from October 21-23, 2024, in the beautiful concert hall of <a href="https://www.psm.kalisz.pl"
                             class="link-google link2" target="_blank">the Henryk Melcer State
                             Music School in Kalisz</a>.
-                        The 1st Kalisz Piano Festival is a unique event where the audience will have the
-                        opportunity to enjoy performances of works from various musical eras by acclaimed
-                        pianists from Austria, Poland, and Italy. Among the invited artists are also the
+                        The 1st Kalisz Piano Festival was a unique event where the audience had the opportunity to enjoy performances of works from various musical eras by acclaimed
+                        pianists from Austria, Poland, and Italy. Among the invited artists were also the
                         laureates of last year's <a href="https://calisia-arts.com/rules.html" class="link-google link2"
                             target="_blank">1st International Henryk Melcer Piano Competition</a>, organized by the
                         Calisia Arts
                         Foundation.
 
                         </br> </br>
-                        In addition to the concerts, the Festival will also feature a series of lectures and piano
-                        workshops for talented youth from Kalisz and the surrounding area. These will be led
+                        In addition to the concerts, the Festival also featured a series of lectures and piano
+                        workshops for talented youth from Kalisz and the surrounding area. These were led
                         by <a href="https://www.wagnerartzt.com" class="link-google link2" target="_blank">Prof. Manfred
                             Wagner-Artzt</a> from the University of Music and Performing Arts
                         Vienna, <a href="https://am.katowice.pl/informacje/raubo-zbigniew-368" class="link-google link2"
