--- a/polish-version-calisia-web/foto-festival24.html
+++ b/polish-version-calisia-web/foto-festival24.html
@@ -91,7 +91,7 @@
     </header>
     <section class="contact">
         <div class="team-h">
-            <h1 class="h1-team"> Fotorelacja</h1>
+            <h1 class="h1-team"> Festiwal 2024 - Fotorelacja</h1>
         </div>
         <div class="main-festiwal margin-bez wynik">
             <div class="main-festiwal margin-bez main3">
