--- a/program.html
+++ b/program.html
@@ -97,11 +97,14 @@
                     <h1 class="h1-team">Program</h1>
                 </div>
                 <div class="main-festiwal margin-bez">
-                    <a href="o-festiwalu.html" class="card">
-                        About festival
+                    <a href="o-festiwalu.html" class="card card2">
+                        About festival 2024
                     </a>
                     <a href="artysci.html" class="card">
                         Artists
+                    </a>
+                    <a href="foto-festival24.html" class="card card2">
+                        Photo gallery
                     </a>
     
                 </div>
