--- a/artysci.html
+++ b/artysci.html
@@ -90,10 +90,10 @@
                     <h1 class="h1-team">Artists</h1>
                 </div>
                 <div class="main-festiwal margin-bez main3">
-                    <a href="rules.html" class="card card2">
+                    <a href="o-festiwalu.html" class="card card2">
                         About festival 2024
                     </a>
-                    <a href="wyniki.html" class="card card2">
+                    <a href="program.html" class="card card2">
                         Program
                     </a>
                     <a href="foto-festival24.html" class="card card2">
