--- a/foto-festival24.html
+++ b/foto-festival24.html
@@ -42,10 +42,10 @@
                             <li><a data-scroll href="team.html" class="int-collapse-menu">Team</a></li>
                             <li><a data-scroll href="contact.html" class="int-collapse-menu">Contact</a>
                             </li>
-                            <li class="active"><a data-scroll href="konkurs24.html"
+                            <li><a data-scroll href="konkurs24.html"
                                     class="int-collapse-menu">Competition</a></li>
                             </li>
-                            <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
+                            <li  class="active"><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
 
                         </ul>
                         <div class="languages">
