--- a/polish-version-calisia-web/festiwal24.html
+++ b/polish-version-calisia-web/festiwal24.html
@@ -98,7 +98,7 @@
 
             <section class="main-festiwal main2">
                 <a href="o-festiwalu.html" class="card card2">
-                   O festiwalu
+                   O festiwalu 2024
                 </a>
                 <a href="program.html" class="card card2">
                     Program
