--- a/polish-version-calisia-web/team-pl.html
+++ b/polish-version-calisia-web/team-pl.html
@@ -118,7 +118,7 @@
                 </div>
                 <img class="jury-img mb-5" src="slider-images/team-2.png">
                 <div class="label-photo">
-                    PhD Katarzyna Piątkowska-Pinczewska MBA
+                    Dr Katarzyna Piątkowska-Pinczewska MBA
                 </div>
                 <!-- Button trigger modal -->
                 <button type="button" class="mb-5 btn btn-secondary" data-bs-toggle="modal"
