--- a/polish-version-calisia-web/artysci.html
+++ b/polish-version-calisia-web/artysci.html
@@ -114,7 +114,7 @@
                 </div>
                 <img class="jury-img mb-5" src="slider-images/raubo.jpg">
                 <div class="label-photo">
-                    Prof. Zbigniew Raubo
+                    prof. Zbigniew Raubo
                 </div>
                 <!-- Button trigger modal -->
                 <button type="button" class="mb-5 btn btn-secondary" data-bs-toggle="modal"
@@ -126,7 +126,7 @@
                 </div>
                 <img class="jury-img mb-5" src="slider-images/artz.jpg">
                 <div class="label-photo">
-                    Prof. Manfred Wagner-Artzt
+                    prof. Manfred Wagner-Artzt
                 </div>
                 <!-- Button trigger modal -->
                 <button type="button" class="mb-5 btn btn-secondary" data-bs-toggle="modal"
@@ -306,7 +306,7 @@
                 <div class="modal-dialog modal-xl">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title text-black text-m-window fs-5" id="exampleModalLabel">Prof. Manfred
+                            <h1 class="modal-title text-black text-m-window fs-5" id="exampleModalLabel">prof. Manfred
                                 Wagner-Artzt - Biografia</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
