--- a/polish-version-calisia-web/artysci.html
+++ b/polish-version-calisia-web/artysci.html
@@ -306,7 +306,7 @@
                 <div class="modal-dialog modal-xl">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title text-black text-m-window fs-5" id="exampleModalLabel">prof. Manfred
+                            <h1 class="modal-title text-black text-m-window fs-5" id="exampleModalLabel">Prof. Manfred
                                 Wagner-Artzt - Biografia</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
