--- a/polish-version-calisia-web/artysci.html
+++ b/polish-version-calisia-web/artysci.html
@@ -100,7 +100,7 @@
                         Fotorelacja
                     </a>
                 </div>
-                <img class="jury-img mb-5" src="slider-images/lukasz.jpg">
+                <img class="jury-img mb-5" src="../slider-images/lukasz-bio-foto.webp">
                 <div class="label-photo">
                     Dr Łukasz Byrdy
                 </div>
@@ -112,7 +112,7 @@
                 <div class="line">
 
                 </div>
-                <img class="jury-img mb-5" src="slider-images/raubo.jpg">
+                <img class="jury-img mb-5" src="../slider-images/raubo-bio.jpg">
                 <div class="label-photo">
                     prof. Zbigniew Raubo
                 </div>
@@ -124,7 +124,7 @@
                 <div class="line">
 
                 </div>
-                <img class="jury-img mb-5" src="slider-images/artz.jpg">
+                <img class="jury-img mb-5" src="../slider-images/artz.jpg">
                 <div class="label-photo">
                     prof. Manfred Wagner-Artzt
                 </div>
@@ -136,7 +136,7 @@
                 <div class="line">
 
                 </div>
-                <img class="jury-img mb-5" src="slider-images/sobich.jpg">
+                <img class="jury-img mb-5" src="../slider-images/sobich.jpg">
                 <div class="label-photo">
                     Katarzyna Sobich
                 </div>
@@ -148,7 +148,7 @@
                 <div class="line">
 
                 </div>
-                <img class="jury-img mb-5" src="slider-images/domagala.jpg">
+                <img class="jury-img mb-5" src="../slider-images/domagala.jpg">
                 <div class="label-photo">
                     Maciej Domagała
                 </div>
@@ -159,7 +159,7 @@
                 <div class="line">
 
                 </div>
-                <img class="jury-img mb-5" src="slider-images/brizzi.jpg">
+                <img class="jury-img mb-5" src="../slider-images/brizzi.jpg">
                 <div class="label-photo">
                     Stefano Brizzi
                 </div>
