--- a/polish-version-calisia-web/o-konkursie.html
+++ b/polish-version-calisia-web/o-konkursie.html
@@ -128,13 +128,13 @@
             </div>
             <div class="container-photo">
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
-                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/1-6.jpg" alt="city, kalisz, view" />
+                    <img class="img-kalisz-1 img-kalisz-2" src="../slider-images/1-6.jpg" alt="city, kalisz, view" />
                     <div class="label-photo">
                         Koncert laureatów w wiedeńskiej Klaviergalerie, laureaci konkursu
                     </div>
                 </div>
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/2-6.JPG" alt="city, kalisz, view" />
+                    <img class="img-kalisz-1 img-kalisz-2" src="../slider-images/2-6.jpg" alt="city, kalisz, view" />
                     <div class="label-photo">
                         Koncert laureatów w PSM I i II st. im. H. Melcera w Kaliszu, Yukino Hayashi - I nagroda,
                         Kategoria E
@@ -142,29 +142,29 @@
                 </div>
 
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/3-6.jpg" alt="konkurs" />
+                    <img class="img-kalisz-1 img-kalisz-2" src="../slider-images/3-6.jpg" alt="konkurs" />
                     <div class="label-photo width-label">
                         Koncert laureatów w kompleksie Calisia One, Kamila Kloc - II nagroda, Kategoria A
                     </div>
                 </div>
 
-               <!-- <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kursy2.jpg" alt="konkurs" />
+               <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                    <img class="img-kalisz-1 img-kalisz-2" src="../slider-images/lukasz-prowadzi-kursy-new.webp" alt="konkurs" />
                     <div class="label-photo">
                         Kursy pianistyczne z dr. Łukaszem Byrdy
                     </div>
                 </div>
-            -->
+            
 
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/5-6.jpg" alt="konkurs" />
+                    <img class="img-kalisz-1 img-kalisz-2" src="../slider-images/5-6.jpg" alt="konkurs" />
                     <div class="label-photo">
                         Koncert laureatów w kompleksie Calisia One, laureaci konkursu - Stefano Brizzi i Maciej Domagała
                     </div>
                 </div>
 
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/6-6.jpg" alt="city, kalisz, view" />
+                    <img class="img-kalisz-1 img-kalisz-2" src="../slider-images/6-6.jpg" alt="city, kalisz, view" />
                     <div class="label-photo">
                         Koncert laureatów w wiedeńskiej Klaviergalerie, prezes Fundacji Calisia Arts - Filip Pinczewski
                     </div>
