--- a/jury.html
+++ b/jury.html
@@ -102,7 +102,7 @@
                     </a>
 
                 </div>
-                <img class="jury-img mb-5" src="slider-images/Byrdy.jpg">
+                <img class="jury-img mb-5" src="slider-images/byrdy-jury.webp">
                 <div class="label-photo">
                     dr Łukasz Byrdy
                 </div>
@@ -114,7 +114,7 @@
                 <div class="line">
 
                 </div>
-                <img class="jury-img mb-5" src="slider-images/Dorotea Cei Foto BN.jpg">
+                <img class="jury-img mb-5" src="slider-images/Dorotea-jury.webp">
                 <div class="label-photo">
                     Dorotea Cei
                 </div>
@@ -126,7 +126,7 @@
                 <div class="line">
 
                 </div>
-                <img class="jury-img mb-5" src="slider-images/Koulianou.jpg">
+                <img class="jury-img mb-5" src="slider-images/Koulianou-jury.webp">
                 <div class="label-photo">
                     Evangelia Koulianou
                 </div>
@@ -161,7 +161,7 @@
                 <div class="line">
 
                 </div>
-                <img class="jury-img mb-5" src="slider-images/Pinczewski.png">
+                <img class="jury-img mb-5" src="slider-images/Pinczewski.webp">
                 <div class="label-photo">
                     Filip Pinczewski
                 </div>
@@ -174,7 +174,7 @@
 
                 </div>
 
-                <img class="jury-img mb-5" src="slider-images/Gianluca.jpeg">
+                <img class="jury-img mb-5" src="slider-images/g-jury.webp">
                 <div class="label-photo">
                     Gianluca Faragli
                 </div>
