--- a/polish-version-calisia-web/foto-festival24.html
+++ b/polish-version-calisia-web/foto-festival24.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio, Foundation, Calisia-Arts, Calisia, Arts, Piano, Music, Competition" />
-
     <title>Calisia-Arts</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -19,12 +18,17 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Main Stylesheet CSS -->
-    <link rel="stylesheet" href="rules.css?id=8">
+    <link rel="stylesheet" href="foto.css">
+    <link rel="stylesheet" href="rules.css">
     <link rel="stylesheet" href="festival.css">
 
     <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
-
+    <link rel="stylesheet" type="text/css" href="foto.css" media="screen" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css"
+        integrity="sha512-kwJUhJJaTDzGp6VTPBbMQWBFUof6+pv0SM3s8fo+E6XnPmVmtfwENK0vHYup3tsYnqHgRDoBDTJWoq7rnQw2+g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -48,7 +52,8 @@
 
                         </ul>
                         <div class="languages">
-                            <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="indexpl.html"><img class="img-flag"
+                                    src="slider-images/icons8-poland-48.png" /></a>
                             <a href="../index.html"><img class="img-flag"
                                     src="slider-images/icons8-great-britain-48.png" /></a>
                             <a href="../chinese-version/index-chinese.html"><img class="img-flag"
@@ -76,7 +81,8 @@
 
                         </ul>
                         <div class="languages-2">
-                            <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="indexpl.html"><img class="img-flag"
+                                    src="slider-images/icons8-poland-48.png" /></a>
                             <a href="../index.html"><img class="img-flag"
                                     src="slider-images/icons8-great-britain-48.png" /></a>
                             <a href="../chinese-version/index-chinese.html"><img class="img-flag"
@@ -89,150 +95,99 @@
         </div>
 
     </header>
-    <section class="contact">
+
+    <div class="container">
         <div class="team-h">
-            <h1 class="h1-team"> Festiwal 2024 - Fotorelacja</h1>
+            <h1 class="h1-team">Fotorelacja</h1>
         </div>
-        <div class="main-festiwal margin-bez wynik">
-            <div class="main-festiwal margin-bez main3">
-                <a href="o-festiwalu.html" class="card card2">
-                    O festiwalu 2024
-                </a>
-                <a href="program.html" class="card card2">
-                    Program
-                </a>
-                <a href="artysci.html" class="card card2">
-                    Artyści
-                </a>
-            </div>
+        <div class="main-festiwal margin-bez">
+            <a href="program.html" class="card">
+                Program
+            </a>
+            <a href="artysci.html" class="card">
+                Artyści
+            </a>
+            <a href="o-festiwalu.html" class="card card2">
+                O festiwalu 2024
+            </a>
 
         </div>
-
-        <div class="container-photo">
-            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/koncerty/Manfred .jpg"
-                    alt="city, kalisz, view" />
-                <div class="label-photo">
-                    Recital Manfreda Wagnera- Artzta
+        <div class="lightgallery">
+            <a class="image" href="/slider-images/recital-manfred-festiwal.webp">
+                <img alt="img2" src="/slider-images/recital-manfred-festiwal.webp" />
+                <div class="caption">
+                    <p>Recital Manfreda Wagnera- Artzta</p>
                 </div>
-            </div>
-            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/koncerty/Lukasz.jpg"
-                    alt="city, kalisz, view" />
-                <div class="label-photo">
-                    Recital Łukasza Byrdy
+            </a>
+
+            <a class="image" href="/slider-images/lukasz-recital-festiwal.webp">
+                <img alt="img2" src="/slider-images/lukasz-recital-festiwal.webp" />
+                <p>Recital Łukasza Byrdy</p>
+            </a>
+
+            <a class="image" href="/slider-images/raubo-festiwal-recital.webp">
+                <img alt="img2" src="/slider-images/raubo-festiwal-recital.webp" />
+                <p>Recital Zbigniewa Raubo</p>
+            </a>
+
+            <a class="image" href="/slider-images/katarzyna-filip.webp">
+                <img alt="img2" src="/slider-images/katarzyna-filip.webp" />
+                <p>Podsumowanie Festiwalu Katarzyna Piątkowska-Pinczewska i Filip Pinczewski</p>
+            </a>
+
+            <a class="image" href="/slider-images/manfred-maciej-festiwal.webp">
+                <img alt="img2" src="/slider-images/manfred-maciej-festiwal.webp" />
+                <p>Maciej Domagała z prof. Manfredem Wagnerem-Artztem</p>
+            </a>
+
+            <a class="image" href="/slider-images/kursy-artz.webp">
+                <img alt="img2" src="/slider-images/kursy-artz.webp" />
+                <div class="caption">
+                    <p>Kursy pianistyczne z prof. Manfredem Wagnerem-Artztem</p>
                 </div>
-            </div>
+            </a>
+            <a class="image" href="../slider-images/kurst-lukasz-festiwal.webp">
+                <img alt="img2" src="../slider-images/kurst-lukasz-festiwal.webp" />
+                <p>Kursy pianistyczne z dr Łukaszem Byrdy</p>
+            </a>
 
-            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/koncerty/Raubo .jpg" alt="konkurs" />
-                <div class="label-photo width-label">
-                    Recital Zbigniewa Raubo 
-                </div>
-            </div>
-
-            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/koncerty/Filip Katarzyna.jpg" alt="konkurs" />
-                <div class="label-photo width-label">
-                    Podsumowanie Festiwalu Katarzyna Piątkowska- Pinczewska i Filip Pinczewski 
-                </div>
-            </div>
-
-
-
-
-            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kursy/20241023_134600.jpg"
-                    alt="city, kalisz, view" />
-                <div class="label-photo">
-                    Kursy pianistyczne z prof. Manfredem Wagnerem- Artztem
-                </div>
-            </div>
-            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kursy/20241021_131043.jpg"
-                    alt="city, kalisz, view" />
-                <div class="label-photo">
-                    Kursy pianistyczne z dr Łukaszem Byrdy
-                </div>
-            </div>
-
-            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kursy/20241022_143905.jpg" alt="konkurs" />
-                <div class="label-photo width-label">
-                    Kursy pianistyczne z prof. Zbigniewem Raubo
-                </div>
-            </div>
-            <!--
-            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kursy.jpg" alt="konkurs" />
-                <div class="label-photo">
-                    Piano masterclasses with Dr. Łukasz Byrdy
-                </div>
-            </div>
-        -->
- 
-        <!--
-        <div class="width-form border-competition">
-
+            <a class="image" href="/slider-images/raubo-festiwal-lursy.webp">
+                <img alt="img2" src="/slider-images/raubo-festiwal-lursy.webp" />
+                <p>Kursy pianistyczne z prof. Zbigniewem Raubo</p>
+            </a>
         </div>
-       
-        <div class="width-form">
-            <form>
-                <p class="text-application text-competition"> Regulamin konkursu <i
-                        class="fa-solid fa-arrow-down"></i> </p>
-                <a class="download-button" href="Rules of the Competition - PLN.docx" download>
-
-                    <p class="download-text">Pobierz regulamin konkursu</p>
-
-                </a>
-            </form>
-        </div>
-        -->
-    </section>
-
-
-    <!--
-    <section class="contact">
-
-        <div class="width-form">
-            <p class="text-application text-competition">Aplikacje można pobrać i wysłać na naszego maila: <spam
-                    class="bank-account-letters">
-                    calisiaarts@gmail.com</spam> <i class="fa-solid fa-arrow-down"></i>
-            </p>
-            <form>
-                <a class="download-button" href="Application form .docx" download>
-
-                    <p class="download-text-2">Download Application</p>
-
-                </a>
-            </form>
-        </div>
-    </section>
-
-    -->
-
-    <!--/ FOOTER SECTION-->
-    <section id="footer" class="footer-wrapper text-center">
-        <div class="container">
-            <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
-                <div class="aligncenter">
-                    <div class="socialFooter">
-                        <a href="https://m.facebook.com/100084549096550/" target="_blank"><i
-                                class="fa fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
-                                class="fa fa-instagram"></i></a>
+        <section id="footer" class="footer-wrapper text-center">
+            <div class="container">
+                <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
+                    <div class="aligncenter">
+                        <div class="socialFooter">
+                            <a href="https://m.facebook.com/100084549096550/" target="_blank"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
+                                    class="fa fa-instagram"></i></a>
+                        </div>
+                        <p><span class="footer-s-1">&copy; 2025</span><span class="footer-span"> Calisia Arts
+                                Foundation</span></p>
                     </div>
-                    <p><span class="footer-s-1">&copy; 2025</span><span class="footer-span"> Calisia Arts
-                            Foundation</span></p>
                 </div>
-            </div>
-    </section>
-    <script src="js/about.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+        </section>
 
+
+</body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"
+    integrity="sha512-b4rL1m5b76KrUhDkj2Vf14Y0l1NtbiNXwV+SzOzLGv6Tz1roJHa70yr8RmTUswrauu2Wgb/xBJPR8v80pQYKtQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<script src="js/about.js"></script>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+<script>
+
+    lightGallery(document.querySelector('.lightgallery'));
+    AOS.init();
+
+</script>
 </body>
 
 </html>
