--- a/jury.html
+++ b/jury.html
@@ -104,7 +104,7 @@
                 </div>
                 <img class="jury-img mb-5" src="slider-images/byrdy-jury.webp">
                 <div class="label-photo">
-                    dr Łukasz Byrdy
+                    Łukasz Byrdy
                 </div>
                 <!-- Button trigger modal -->
                 <button type="button" class="mb-5 btn btn-secondary" data-bs-toggle="modal"
