--- a/artysci.html
+++ b/artysci.html
@@ -100,7 +100,7 @@
                         Photo gallery
                     </a>
                 </div>
-                <img class="jury-img mb-5" src="slider-images/lukasz.jpg">
+                <img class="jury-img mb-5" src="slider-images/lukasz-bio-foto.webp">
                 <div class="label-photo">
                     Dr. Łukasz Byrdy
                 </div>
@@ -112,7 +112,7 @@
                 <div class="line">
 
                 </div>
-                <img class="jury-img mb-5" src="slider-images/raubo.jpg">
+                <img class="jury-img mb-5" src="slider-images/raubo-bio.jpg">
                 <div class="label-photo">
                     Prof. Zbigniew Raubo
                 </div>
