--- a/polish-version-calisia-web/artysci.html
+++ b/polish-version-calisia-web/artysci.html
@@ -102,7 +102,7 @@
                 </div>
                 <img class="jury-img mb-5" src="../slider-images/lukasz-bio-foto.webp">
                 <div class="label-photo">
-                    Dr Łukasz Byrdy
+                    dr Łukasz Byrdy
                 </div>
                 <!-- Button trigger modal -->
                 <button type="button" class="mb-5 btn btn-secondary" data-bs-toggle="modal"
