--- a/polish-version-calisia-web/foto.html
+++ b/polish-version-calisia-web/foto.html
@@ -101,103 +101,103 @@
 
   </div>
     <div class="lightgallery">
-      <a class="image" href="/slider-images/2.JPG">
-        <img alt="img2" src="/slider-images/2.JPG" />
+      <a class="image" href="/slider-images/gallery1.webp">
+        <img alt="img2" src="/slider-images/gallery1.webp" />
         <div class="caption">
           <p>Koncert laureatów w PSM I i II st. im. H. Melcera w Kaliszu, laureaci konkursu</p>
         </div>
       </a>
 
-      <a class="image" href="/slider-images/3.JPG">
-        <img alt="img2" src="/slider-images/3.JPG" />
+      <a class="image" href="/slider-images/gallery2.webp">
+        <img alt="img2" src="/slider-images/gallery2.webp" />
         <p>Koncert laureatów w PSM I i II st. im. H. Melcera w Kaliszu, Zofia Jamróz - II nagroda,
           Kategoria E</p>
       </a>
 
-      <a class="image" href="/slider-images/4.JPG">
-        <img alt="img2" src="/slider-images/4.JPG" />
+      <a class="image" href="/slider-images/gallery3.webp">
+        <img alt="img2" src="/slider-images/gallery3.webp" />
         <p>Koncert laureatów w PSM I i II st. im. H. Melcera w Kaliszu, Filip Samól - II nagroda, Kategoria D</p>
       </a>
 
-      <a class="image" href="/slider-images/5.JPG">
-        <img alt="img2" src="/slider-images/5.JPG" />
+      <a class="image" href="/slider-images/gallery5.webp">
+        <img alt="img2" src="/slider-images/gallery5.webp" />
         <p>Koncert laureatów w PSM I i II st. im. H. Melcera w Kaliszu, Amadeusz Maksymiuk - II nagroda,
           Kategoria D</p>
       </a>
 
-      <a class="image" href="/slider-images/6.JPG">
-        <img alt="img2" src="/slider-images/6.JPG" />
+      <a class="image" href="/slider-images/gallery6.webp">
+        <img alt="img2" src="/slider-images/gallery6.webp" />
         <p>Koncert laureatów w PSM I i II st. im. H. Melcera w Kaliszu, Yukino Hayashi - I nagroda, Kategoria E</p>
       </a>
 
-      <a class="image" href="/slider-images/16.jpg">
-        <img alt="img2" src="/slider-images/16.jpg" />
+      <a class="image" href="/slider-images/gallery-16.webp">
+        <img alt="img2" src="/slider-images/gallery-16.webp" />
         <div class="caption">
           <p>Koncert laureatów w kompleksie Calisia One, Yufeng Pan - I nagroda, Kategoria B</p>
         </div>
       </a>
-      <a class="image" href="/slider-images/18.jpg">
-        <img alt="img2" src="/slider-images/18.jpg" />
+      <a class="image" href="/slider-images/gallery-domagala.webp">
+        <img alt="img2" src="/slider-images/gallery-domagala.webp" />
         <p>Koncert laureatów w kompleksie Calisia One, Maciej Domagała, I nagroda, Kategoria C i nagroda za
           najlepsze wykonanie utworu Henryka Melcera</p>
       </a>
 
-      <a class="image" href="/slider-images/13.jpg">
-        <img alt="img2" src="/slider-images/13.jpg" />
+      <a class="image" href="/slider-images/galley-wszyscy.webp">
+        <img alt="img2" src="/slider-images/galley-wszyscy.webp" />
         <p>Koncert laureatów w wiedeńskiej Klaviergalerie, laureaci konkursu</p>
       </a>
 
-      <a class="image" href="/slider-images/7.JPG">
-        <img alt="img2" src="/slider-images/7.JPG" />
+      <a class="image" href="/slider-images/gallery-domagala2.webp">
+        <img alt="img2" src="/slider-images/gallery-domagala2.webp" />
         <div class="caption">
           <p>Koncert laureatów w PSM I i II st. im. H. Melcera w Kaliszu, Maciej Domagała - I nagroda, Kategoria C
             i nagroda za najlepsze wykonanie utworu Henryka Melcera</p>
         </div>
       </a>
 
-      <a class="image" href="/slider-images/15.JPG">
-        <img alt="img2" src="/slider-images/15.jpg" />
+      <a class="image" href="/slider-images/gallery-kamila.webp">
+        <img alt="img2" src="/slider-images/gallery-kamila.webp" />
         <p>Koncert laureatów w kompleksie Calisia One, Kamila Kloc - II nagroda, Kategoria A</p>
       </a>
 
-      <a class="image" href="/slider-images/17.JPG">
-        <img alt="img2" src="/slider-images/17.jpg" />
+      <a class="image" href="/slider-images/gallery-piano.jpg">
+        <img alt="img2" src="/slider-images/gallery-piano.jpg" />
         <p>Koncert laureatów w kompleksie Calisia One, Yang Zhang, III nagroda, Kategoria E</p>
       </a>
 
-      <a class="image" href="/slider-images/14.JPG">
-        <img alt="img2" src="/slider-images/14.jpg" />
+      <a class="image" href="/slider-images/gallery-lukasz.webp">
+        <img alt="img2" src="/slider-images/gallery-lukasz.webp" />
         <p>Koncert laureatów w kompleksie Calisia One, przewodniczący Jury konkursu - Łukasz Byrdy</p>
       </a>
 
-      <a class="image" href="/slider-images/20.JPG">
-        <img alt="img2" src="/slider-images/20.jpg" />
-        <p>Koncert laureatów w kompleksie Calisia One, laureaci konkursu wraz z członkami Fundacji Calisia
+      <a class="image" href="/slider-images/gallery-all2.jpg">
+        <img alt="img2" src="/slider-images/gallery-all2.jpg" />
+        <p>Koncert laureatów w kompleksie Cagallery-all2.jpgOne, laureaci konkursu wraz z członkami Fundacji Calisia
           Arts</p>
       </a>
 
-      <a class="image" href="/slider-images/21.jpg">
-        <img alt="img2" src="/slider-images/21.jpg" />
+      <a class="image" href="/slider-images/gallery-m-s.webp">
+        <img alt="img2" src="/slider-images/gallery-m-s.webp" />
         <p>Koncert laureatów w kompleksie Calisia One, laureaci konkursu - Stefano Brizzi i Maciej Domagała</p>
       </a>
 
-      <a class="image" href="/slider-images/25.JPG">
+      <a class="image" href="/slider-images/25.jpg">
         <img alt="img2" src="/slider-images/25.jpg" />
         <p>Koncert laureatów w kompleksie Calisia One, prezes Fundacji Calisia Arts - Filip Pinczewski</p>
       </a>
 
-      <a class="image" href="/slider-images/12.JPG">
-        <img alt="img2" src="/slider-images/12.jpg" />
+      <a class="image" href="/slider-images/gallery-filip.webp">
+        <img alt="img2" src="/slider-images/gallery-filip.webp" />
         <p>Koncert laureatów w wiedeńskiej Klaviergalerie, prezes Fundacji Calisia Arts - Filip Pinczewski</p>
       </a>
 
-      <a class="image" href="/slider-images/19.JPG">
-        <img alt="img2" src="/slider-images/19.jpg" />
+      <a class="image" href="/slider-images/gallery-brizzi.webp">
+        <img alt="img2" src="/slider-images/gallery-brizzi.webp" />
         <p>Koncert laureatów w kompleksie Calisia One, Stefano Brizzi, I nagroda, Kategoria C</p>
       </a>
 
-      <a class="image" href="/slider-images/26.JPG">
-        <img alt="img2" src="/slider-images/26.jpg" />
+      <a class="image" href="/slider-images/gallery-medale.webp">
+        <img alt="img2" src="/slider-images/gallery-medale.webp" />
         <p>Okolicznościowe medale dla laureatów pierwszych nagród konkursu</p>
       </a>
     </div>
