--- a/team.html
+++ b/team.html
@@ -84,12 +84,11 @@
 
     <body>
         <div class="team-container">
+
+            <div class="team-h">
+                <h1 class="h1-team">Our Team</h1>
+            </div>
             <div class="jury-box">
-                <div class="team-h">
-                    <h1 class="h1-team">Our Team</h1>
-                </div>
-
-
                 <img class="jury-img mb-5" src="slider-images/logo-black-calisia.png">
                 <div class="label-photo">
                     Calisia Arts Foundation
@@ -104,7 +103,7 @@
                 </div>
                 <img class="jury-img mb-5" src="slider-images/lukasz-bio-foto.webp">
                 <div class="label-photo">
-                    PhD Łukasz Byrdy MBA
+                    PhD Łukasz Byrdy
                 </div>
                 <!-- Button trigger modal -->
                 <button type="button" class="mb-5 btn btn-secondary" data-bs-toggle="modal"
