--- a/jury.html
+++ b/jury.html
@@ -263,12 +263,12 @@
                 <div class="modal-dialog modal-xl">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title text-black text-m-window fs-5" id="exampleModalLabel">dr Łukasz Byrdy
+                            <h1 class="modal-title text-black text-m-window fs-5" id="exampleModalLabel">Łukasz Byrdy
                                 - Biography</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body text-black">
-                            Dr. Łukasz Byrdy is one of the most outstanding pianists of the younger generation, who
+                            Łukasz Byrdy is one of the most outstanding pianists of the younger generation, who
                             during
                             his concert career spanning over 10 years, has performed several hundred times in most
                             European countries, as well as in the USA, Canada, China, and the United Arab Emirates. Born
