--- a/polish-version-calisia-web/foto-festival24.html
+++ b/polish-version-calisia-web/foto-festival24.html
@@ -125,10 +125,27 @@
                 <p>Recital Łukasza Byrdy</p>
             </a>
 
+            <a class="image" href="/slider-images/lukasz-recital-festiwal.webp">
+                <img alt="img2" src="/slider-images/lukasz-recital-festiwal.webp" />
+                <p>Recital Łukasza Byrdy</p>
+            </a>
+
             <a class="image" href="/slider-images/raubo-festiwal-recital.webp">
                 <img alt="img2" src="/slider-images/raubo-festiwal-recital.webp" />
                 <p>Recital Zbigniewa Raubo</p>
             </a>
+
+            <a class="image" href="/slider-images/raubo-festiwal-recital.webp">
+                <img alt="img2" src="/slider-images/raubo-festiwal-recital.webp" />
+                <p>Recital Zbigniewa Raubo</p>
+            </a>
+
+            <a class="image" href="/slider-images/raubo-festiwal-recital.webp">
+                <img alt="img2" src="/slider-images/raubo-festiwal-recital.webp" />
+                <p>Recital Zbigniewa Raubo</p>
+            </a>
+
+
 
             <a class="image" href="/slider-images/katarzyna-filip.webp">
                 <img alt="img2" src="/slider-images/katarzyna-filip.webp" />
@@ -140,15 +157,23 @@
                 <p>Maciej Domagała z prof. Manfredem Wagnerem-Artztem</p>
             </a>
 
-            <a class="image" href="/slider-images/kursy-artz.webp">
-                <img alt="img2" src="/slider-images/kursy-artz.webp" />
-                <div class="caption">
-                    <p>Kursy pianistyczne z prof. Manfredem Wagnerem-Artztem</p>
-                </div>
+            <a class="image" href="../slider-images/kurst-lukasz-festiwal.webp">
+                <img alt="img2" src="../slider-images/kurst-lukasz-festiwal.webp" />
+                <p>Kursy pianistyczne z dr Łukaszem Byrdy</p>
             </a>
             <a class="image" href="../slider-images/kurst-lukasz-festiwal.webp">
                 <img alt="img2" src="../slider-images/kurst-lukasz-festiwal.webp" />
                 <p>Kursy pianistyczne z dr Łukaszem Byrdy</p>
+            </a>
+
+            <a class="image" href="../slider-images/kurst-lukasz-festiwal.webp">
+                <img alt="img2" src="../slider-images/kurst-lukasz-festiwal.webp" />
+                <p>Kursy pianistyczne z dr Łukaszem Byrdy</p>
+            </a>
+
+            <a class="image" href="/slider-images/raubo-festiwal-lursy.webp">
+                <img alt="img2" src="/slider-images/raubo-festiwal-lursy.webp" />
+                <p>Kursy pianistyczne z prof. Zbigniewem Raubo</p>
             </a>
 
             <a class="image" href="/slider-images/raubo-festiwal-lursy.webp">
